--- a/uncrustify.cfg
+++ b/uncrustify.cfg
@@ -113,7 +113,7 @@ indent_class_colon                        = false    # false/true
 indent_constr_colon                       = false    # false/true
 
 # Virtual indent from the ':' for member initializers. Default is 2
-indent_ctor_init_leading                  = 2        # number
+indent_ctor_init_leading                  = 0        # number
 
 # Additional indenting for constructor initializer list
 indent_ctor_init                          = 0        # number
@@ -239,7 +239,7 @@ indent_oc_msg_colon                       = 0        # number
 
 # If true, prioritize aligning with initial colon (and stripping spaces from lines, if necessary).
 # Default is true.
-indent_oc_msg_prioritize_first_colon      = true     # false/true
+indent_oc_msg_prioritize_first_colon      = false     # false/true
 
 # If indent_oc_block_msg and this option are on, blocks will be indented the way that Xcode does by default (from keyword if the parameter is on its own line; otherwise, from the previous indentation level).
 indent_oc_block_msg_xcode_style           = false    # false/true
@@ -451,7 +451,7 @@ sp_before_squares                         = ignore   # ignore/add/remove/force
 sp_inside_square                          = ignore   # ignore/add/remove/force
 
 # Add or remove space after ','
-sp_after_comma                            = ignore   # ignore/add/remove/force
+sp_after_comma                            = add   # ignore/add/remove/force
 
 # Add or remove space before ','
 sp_before_comma                           = remove   # ignore/add/remove/force
@@ -1292,7 +1292,7 @@ nl_class_colon                            = ignore   # ignore/add/remove/force
 
 # Add or remove a newline around a class constructor colon.
 # Related to pos_constr_colon, nl_constr_init_args, and pos_constr_comma.
-nl_constr_colon                           = ignore   # ignore/add/remove/force
+nl_constr_colon                           = add   # ignore/add/remove/force
 
 # Change simple unbraced if statements into a one-liner
 # 'if(b)\n i++;' => 'if(b) i++;'
@@ -1333,13 +1333,13 @@ pos_comma                                 = ignore   # ignore/join/lead/lead_bre
 pos_class_comma                           = ignore   # ignore/join/lead/lead_break/lead_force/trail/trail_break/trail_force
 
 # The position of the comma in the constructor initialization list
-pos_constr_comma                          = ignore   # ignore/join/lead/lead_break/lead_force/trail/trail_break/trail_force
+pos_constr_comma                          = lead_break   # ignore/join/lead/lead_break/lead_force/trail/trail_break/trail_force
 
 # The position of colons between class and base class list
 pos_class_colon                           = ignore   # ignore/join/lead/lead_break/lead_force/trail/trail_break/trail_force
 
 # The position of colons between constructor and member initialization
-pos_constr_colon                          = ignore   # ignore/join/lead/lead_break/lead_force/trail/trail_break/trail_force
+pos_constr_colon                          = lead_break   # ignore/join/lead/lead_break/lead_force/trail/trail_break/trail_force
 
 #
 # Line Splitting options
