--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,27 +1,33 @@
 set -g default-terminal "screen-256color"
 
-# split windows like vim
-# vim's definition of a horizontal/vertical split is reversed from tmux's
-bind s split-window -v
-bind v split-window -h
+set -g base-index 1
 
-# move around panes with hjkl, as one would in vim after pressing ctrl-w
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+setw -g mode-mouse on
+set -g mouse-select-pane on
 
-# resize panes like vim
-# feel free to change the "1" to however many lines you want to resize by, only
-# one at a time can be slow
-bind < resize-pane -L 10
-bind > resize-pane -R 10
-bind - resize-pane -D 10
-bind + resize-pane -U 10
+set -g history-limit 30000
 
-# bind : to command-prompt like vim
-# this is the default in tmux already
-bind : command-prompt
+unbind C-b
+set -g prefix C-s
+
+bind-key r source-file ~/.tmux.conf \; display-message "Reloaded .tmux.conf"
+
+bind | split-window -h
+bind - split-window -v
+
+# smart pane switching with awareness of vim splits
+bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
+bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
+
+bind H resize-pane -L 10
+bind L resize-pane -R 10
+bind J resize-pane -D 10
+bind K resize-pane -U 10
 
 # vi-style controls for copy mode
 setw -g mode-keys vi
+
+set-window-option -g automatic-rename on
