--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,8 +2,7 @@ set -g default-terminal "screen-256color"
 
 set -g base-index 1
 
-setw -g mode-mouse on
-set -g mouse-select-pane on
+setw -g mouse on
 
 set -g history-limit 30000
 
