Updated nvim config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,7 +29,15 @@ bind L resize-pane -R 10
 bind J resize-pane -D 10
 bind K resize-pane -U 10
 
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+bind P paste-buffer
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
+
 # vi-style controls for copy mode
 setw -g mode-keys vi
 
 set-window-option -g automatic-rename on
+
+source /usr/share/powerline/bindings/tmux/powerline.conf
+
