--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
 
 set -g base-index 1
 
@@ -16,7 +16,7 @@ bind - split-window -v
 
 # smart pane switching with awareness of vim splits
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+   | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 
 bind-key -n C-h  if-shell  "$is_vim"  "send-keys C-h"  "select-pane -L"
 bind-key -n C-j   if-shell  "$is_vim"  "send-keys C-j"   "select-pane -D"
@@ -34,10 +34,20 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 bind P paste-buffer
 bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
 
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
 # vi-style controls for copy mode
 setw -g mode-keys vi
 
 set-window-option -g automatic-rename on
 
-source /usr/share/powerline/bindings/tmux/powerline.conf
+#source /usr/share/powerline/bindings/tmux/powerline.conf
 
+set -g @plugin 'arcticicestudio/nord-tmux'
+set -g @plugin 'wfxr/tmux-power'
+set -g @tmux_power_theme 'everforest'
+# set -g @plugin 'tmux-plugins/tpm'
+#set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
