Updated tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,30 +1,24 @@
 set -g default-terminal "tmux-256color"
-
 set -g base-index 1
-
 setw -g mouse on
-
 set -g history-limit 30000
-
 set -sg escape-time 0
 
 unbind C-b
 set -g prefix C-s
 
-bind-key r source-file ~/.tmux.conf \; display-message "Reloaded .tmux.conf"
-
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 
 # smart pane switching with awareness of vim splits
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 
 bind-key -n C-h  if-shell  "$is_vim"  "send-keys C-h"  "select-pane -L"
-bind-key -n C-j   if-shell  "$is_vim"  "send-keys C-j"   "select-pane -D"
+bind-key -n C-j  if-shell  "$is_vim"  "send-keys C-j"   "select-pane -D"
 bind-key -n C-k  if-shell  "$is_vim"  "send-keys C-k"  "select-pane -U"
-bind-key -n C-l   if-shell  "$is_vim"  "send-keys C-l"   "select-pane -R"
-bind-key -n C-\   if-shell  "$is_vim"  "send-keys C-\\"  "select-pane -l"
+bind-key -n C-l  if-shell  "$is_vim"  "send-keys C-l"   "select-pane -R"
+bind-key -n C-\  if-shell  "$is_vim"  "send-keys C-\\"  "select-pane -l"
 
 bind H resize-pane -L 10
 bind L resize-pane -R 10
@@ -36,20 +30,45 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 bind P paste-buffer
 bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
 
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
-
 # vi-style controls for copy mode
 setw -g mode-keys vi
 
 set-window-option -g automatic-rename on
 
-#source /usr/share/powerline/bindings/tmux/powerline.conf
+# Allow Ctrl+Space to pass through to applications (like Neovim)
+unbind -T prefix C-Space
+unbind -n C-Space
 
-set -g @plugin 'arcticicestudio/nord-tmux'
-set -g @plugin 'wfxr/tmux-power'
-set -g @tmux_power_theme 'everforest'
-# set -g @plugin 'tmux-plugins/tpm'
-#set -g @plugin 'tmux-plugins/tmux-sensible'
+# Configure the catppuccin plugin
+set -g @catppuccin_flavor "mocha"
+set -g @catppuccin_window_status_style "rounded"
+
+# Make the status line pretty and add some modules
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_application}"
+set -agF status-right "#{E:@catppuccin_status_cpu}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+set -ag status-right "#{E:@catppuccin_status_uptime}"
+set -agF status-right "#{E:@catppuccin_status_battery}"
+
+set -g status-position top
+
+run ~/.config/tmux/plugins/tmux-plugins/tmux-cpu/cpu.tmux
+run ~/.config/tmux/plugins/tmux-plugins/tmux-battery/battery.tmux
+
+# set -g @plugin 'nordtheme/nord-tmux'
+# set -g @plugin 'wfxr/tmux-power'
+set -g @plugin 'TanglingTreats/tmux-everforest' # Adds to the list of plugins
+# set -g @tmux-everforest 'dark-medium' # Sets the option to select the theme. Also the default.
+# set -g @plugin 'catppuccin/tmux#v2.1.3'
+
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tpm'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
